# Zplan

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  zplan-backtest  zplan-pick  zplan-shared  zplan-trend  zplan.code-workspace
zplan-web/: config.py  main.py  pyproject.toml  rebuild.sh  run-e2e.sh
zplan-web/api/: chat.py  dashboard.py  execution.py  forecast.py  market.py  picks.py  watchlist.py
zplan-web/frontend/: index.html  package-lock.json  package.json  run-test.sh  test-e2e.mjs  test-features.mjs  test-prod.mjs  test-screenshots.mjs  test.mjs  vite.config.ts
zplan-web/frontend/src/: App.min.tsx  App.tsx  index.css  main.bare.tsx  main.step1.tsx  main.step2.tsx  main.tsx
zplan-web/frontend/src/api/: client.ts
zplan-web/frontend/src/components/: MainLayout.tsx  (+1 more)
zplan-web/services/: chat_service.py
zplan-共享/: README.md  pyproject.toml
zplan-共享/docs/: DATA_ARCHITECTURE.md
zplan-共享/scripts/: backfill_company_websites.py  seed_demo_prices.py
zplan-共享/src/zplan_shared/: __init__.py  ah_analysis.py  chart_viz.py  chat_iterate_store.py  concept_product.py  concept_screen.py  config.py  cross_market.py  data_sources.py  db_engine.py  enrich_company.py  etl_akshare.py  etl_akshare_hk.py  etl_chip.py  etl_daily_features.py  etl_financial.py  etl_index.py  etl_intraday.py  etl_snapshot.py  etl_snapshot_hk.py  exit_config.py  exit_strategy.py  feature_store.py  features.py  forecast_evaluate.py  forecast_iterate_store.py  fundamentals.py  http_client.py  intraday_store.py  market.py  market_health.py  models.py  news_linker.py  pattern_similarity.py  pick_context.py  pick_iterate_store.py  pick_llm_eval.py  pick_predictions.py  pick_store.py  pick_watchlist.py  (+6 more)
zplan-共享/tests/: test_news_linker.py
(+330 files in other folders)
