[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zplan-shared"
version = "0.1.0"
description = "Z-Plan 共享配置、数据库模型与 AkShare 股价 ETL"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.16.0",
    "matplotlib>=3.8",
    "mplfinance>=0.12.10a0",
    "pandas",
    "pyarrow",
    "python-dotenv",
    "scipy>=1.10",
    "sqlalchemy",
    "tenacity",
    "typing_extensions>=4.9.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
]

[tool.setuptools.packages.find]
where = ["src"]
